manifests/advanced-policies/frontend-zone/50-ciliumnetworkpolicy-frontend-controlled-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frontend-controlled-egress
  namespace: frontend-zone
spec:
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: ANY
      rules:
        dns:
        - matchPattern: '*'
  - toEndpoints:
    - matchLabels:
        app: backend
        k8s:io.kubernetes.pod.namespace: backend-zone
    toPorts:
    - ports:
      - port: '80'
        protocol: TCP
  - toFQDNs:
    - matchName: example.com
    toPorts:
    - ports:
      - port: '443'
        protocol: TCP
  endpointSelector:
    matchLabels:
      app: frontend
